# biodome-rs

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: lib.rs  rawconv.rs
tests/: test_mac.rs
