[package]
name = "biodome"
version = "0.1.1"
edition = "2018"
description = "Reading and parsing env vars with defaults and structured types"
homepage = "https://github.com/cjrh/biodome-rs"
repository = "https://github.com/cjrh/biodome-rs"
authors = ["Caleb Hattingh <caleb.hattingh@gmail.com>"]
readme = "README.md"
licence = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["env", "environment-variable"]
include = [
    "**/*.rs",
    "Cargo.toml",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
